# ECS3D

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp
source/: CMakeLists.txt  ECS3D.cpp  ECS3D.h  GuiComponents.h  SaveManager.cpp  SaveManager.h
source/apps/: CMakeLists.txt  SetupTest.json
source/apps/client/: CMakeLists.txt  ClientApp.cpp  ClientApp.h  main.cpp
source/apps/editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  main.cpp
source/apps/launcher/: .gitignore  AGENTS.md  CMakeLists.txt  Directory.Build.props  ECS3DLauncher.csproj  ECS3DLauncher.csproj.DotSettings
source/apps/launcher/source/: App.axaml  App.axaml.cs  Program.cs
source/apps/launcher/source/Shared/: DesignData.cs
source/apps/launcher/source/Shell/: MainWindow.axaml  MainWindow.axaml.cs  MainWindowViewModel.cs  NavItemViewModel.cs
source/apps/server/: CMakeLists.txt  DefaultProject.cpp  DefaultProject.h  ServerApp.cpp  ServerApp.h  main.cpp
source/assets/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  ModelAsset.cpp  ModelAsset.h  SceneAsset.cpp  SceneAsset.h  ScriptAsset.cpp  ScriptAsset.h  TextureAsset.cpp  TextureAsset.h
source/client/: CMakeLists.txt
source/cmake/: loadCS.cmake
source/core/: CMakeLists.txt  ECS3D.cpp  ECS3D.h  SaveManager.cpp
source/core/assets/: Asset.cpp  AssetManager.h  ModelAsset.cpp  SceneAsset.cpp  SceneAsset.h  ScriptAsset.h
source/core/cmake/: loadCS.cmake
source/core/objects/: CollisionManager.h  ObjectGUIManager.h
source/core/objects/components/: Component.cpp  Component.h  LightRenderer.cpp  LightRenderer.h  RigidBody.cpp  Transform.cpp
source/core/objects/components/collisions/: BoxCollider.cpp  BoxCollider.h  Collider.h  Simplex.cpp  (+2 more)
source/core/scenes/: SceneManager.cpp  SceneManager.h
source/core/scripts/: InputUtils.h  ScriptEngine.cpp  ScriptManager.cpp
source/core/scripts/ScriptBridge/: ScriptBridge.csproj
source/editor/: CMakeLists.txt
source/libs/: CMakeLists.txt  ECS3DManaged.cmake
source/libs/clrHost/: CMakeLists.txt  ManagedHost.cpp  ManagedHost.h
source/libs/clrHost/cmake/: ECS3DManaged.cmake  FindDotnet.cmake  loadCS.cmake
source/libs/data/: CMakeLists.txt  ComponentRegistration.cpp  ComponentRegistration.h  ComponentRegistry.cpp  ComponentRegistry.h  ProjectPacker.cpp  ProjectPacker.h  ProjectSerializer.cpp  ProjectSerializer.h  Replication.cpp  Replication.h
source/libs/data/assets/: AssetRegistry.cpp  AssetRegistry.h  PrefabLoader.cpp  PrefabLoader.h
source/libs/data/context/: EditContext.h  RenderContext.h  SimContext.h
source/libs/data/objects/: Object.cpp  Object.h  ObjectManager.cpp  ObjectManager.h
source/libs/data/scenes/: SceneAsset.cpp  SceneAsset.h  SceneManager.cpp  SceneManager.h
source/libs/editor/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  AssetDisplay.h  AssetDragDrop.h  AssetInspector.cpp  AssetInspector.h  CMakeLists.txt  ComponentEditor.cpp  ComponentEditor.h  EditorTheme.h  GuiComponents.h  InspectorPanel.cpp  InspectorPanel.h  ObjectGUIManager.cpp  ObjectGUIManager.h  ObjectInspector.cpp  ObjectInspector.h  SaveUI.cpp  SaveUI.h  Selection.h  TransientObject.cpp  TransientObject.h
source/libs/editor/components/: CameraEditor.cpp  CameraEditor.h  ColliderEditor.cpp  ColliderEditor.h  LightRendererEditor.cpp  LightRendererEditor.h  ModelRendererEditor.cpp  ModelRendererEditor.h  PlayerControllerEditor.cpp  PlayerControllerEditor.h  RigidBodyEditor.cpp  RigidBodyEditor.h  ScriptEditor.cpp  ScriptEditor.h  TransformEditor.cpp  TransformEditor.h
source/libs/net/: CMakeLists.txt  MessageQueue.cpp  MessageQueue.h  NetClient.cpp  NetClient.h  NetServer.cpp  NetServer.h  Protocol.h  ServerProcess.cpp  ServerProcess.h
source/libs/net/Transport/: Directory.Build.props  ECS3DNetTransport.csproj  TcpBackend.cs  Transport.cs  TransportBackend.cs  WebSocketBackend.cs
source/libs/protocol/: CMakeLists.txt  Protocol.h
source/libs/render/: CMakeLists.txt  GpuAssetCache.cpp  GpuAssetCache.h  InputCapture.cpp  InputCapture.h  RenderSystem.cpp  RenderSystem.h
source/libs/scripting/: CMakeLists.txt  ScriptEngine.cpp  ScriptEngine.h  ScriptSystem.cpp  ScriptSystem.h
source/libs/scripting/ScriptBridge/: ScriptBase.cs  ScriptBridge.cs  ScriptBridge.csproj
source/libs/scripting/UserScripts/: BlockScript.cs  PlayerScript.cs
source/libs/scripting/bindings/: BindingContext.cpp  BindingContext.h  CameraBindings.cpp  CameraBindings.h  InputState.cpp  InputState.h  InputUtilsBindings.cpp  InputUtilsBindings.h  RigidBodyBindings.cpp  RigidBodyBindings.h  TransformBindings.cpp  TransformBindings.h  WorldBindings.cpp  WorldBindings.h
source/libs/sim/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
source/libs/sim/collisions/: Polytope.cpp  Polytope.h  Simplex.cpp  Support.cpp  Support.h
source/libs/sim/queries/: SceneQueries.cpp  SceneQueries.h
source/objects/: CollisionManager.cpp  CollisionManager.h  Object.cpp  Object.h  ObjectGUIManager.cpp  ObjectGUIManager.h  ObjectManager.cpp  ObjectManager.h
source/objects/components/: Component.cpp  Component.h  Components.h  LightRenderer.cpp  LightRenderer.h  ModelRenderer.cpp  ModelRenderer.h  Player.cpp  Player.h  RigidBody.cpp  RigidBody.h  Script.cpp  Script.h  Transform.cpp  Transform.h
source/objects/components/collisions/: BoxCollider.cpp  BoxCollider.h  Collider.cpp  Collider.h  Polytope.cpp  Polytope.h  Simplex.cpp  Simplex.h  SphereCollider.cpp  SphereCollider.h
source/scenes/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
source/scripts/: InputUtils.cpp  InputUtils.h  ScriptBindings.cpp  ScriptBindings.h  ScriptEngine.cpp  ScriptEngine.h  ScriptManager.cpp  ScriptManager.h
source/scripts/ScriptBridge/: Directory.Build.props  ExposeToEditorAttribute.cs  NativeBindings.cs  RigidBody.cs  RigidBodyBindings.cs  ScriptBase.cs  ScriptBridge.cs  ScriptBridge.csproj  Transform.cs  TransformBindings.cs
source/scripts/ScriptBridge/components/: InputUtils.cs  NativeBindings.cs  RigidBody.cs
source/scripts/UserScripts/: PlayerScript.cs
source/server/: CMakeLists.txt
(+60 files in other folders)
